--- a/Barcelona2.ipynb
+++ b/Barcelona2.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPY9R5YjzOtqu0jqO5ZafS5",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Alexiagmz/Actividad-7-Reto-Final-/blob/main/Barcelona2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
@@ -322,7 +310,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 638
+          "height": 637
         },
         "collapsed": true,
         "id": "lhWQzu-Pu2cv",
@@ -1650,6 +1638,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "1C56n-3ovQ9q",
         "outputId": "f11e866d-21be-4ba3-f465-d5b9e2584b3c"
       },
@@ -2164,6 +2153,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "LKBeBJqZdIZG",
         "outputId": "4b458fd3-e426-439b-d6cb-7504a2f06d7e"
       },
@@ -2626,9 +2616,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-FJGggGKyGQr",
-        "outputId": "a185b1ae-e018-4fe1-a5c0-65dbc3a9063e"
+        "outputId": "14a407f3-732d-47ff-a9c2-6436c8fbf823"
       },
-      "execution_count": 34,
+      "execution_count": 221,
       "outputs": [
         {
           "output_type": "stream",
@@ -2731,9 +2721,8 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 488
         },
-        "collapsed": true,
         "id": "TzZWRq-l2oCa",
         "outputId": "455c230a-2675-481c-ed47-9c0307dd016b"
       },
@@ -3541,6 +3530,17 @@
           "execution_count": 39
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data3[\"host_is_superhost\"]=data3[\"host_is_superhost\"]==\"f\""
+      ],
+      "metadata": {
+        "id": "UhdbCqQvFuB3"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -6897,8 +6897,7 @@
           "height": 175
         },
         "id": "-574jyB052dR",
-        "outputId": "c60aef75-1eef-4c36-a2ca-bb2e0076527f",
-        "collapsed": true
+        "outputId": "c60aef75-1eef-4c36-a2ca-bb2e0076527f"
       },
       "execution_count": 49,
       "outputs": [
@@ -7244,11 +7243,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 541
+          "height": 542
         },
         "id": "qc45ijqU6PWd",
-        "outputId": "6beac07a-a393-429e-b989-719dc6615e80",
-        "collapsed": true
+        "outputId": "6beac07a-a393-429e-b989-719dc6615e80"
       },
       "execution_count": 50,
       "outputs": [
@@ -8467,8 +8465,7 @@
           "height": 269
         },
         "id": "Zb4FrVXq8Cqa",
-        "outputId": "418ed43f-a9ad-4986-d720-2bdd0c4bf6e2",
-        "collapsed": true
+        "outputId": "418ed43f-a9ad-4986-d720-2bdd0c4bf6e2"
       },
       "execution_count": 54,
       "outputs": [
@@ -8829,7 +8826,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 478
+          "height": 479
         },
         "id": "1Yxj-wt68L7L",
         "outputId": "e662c22e-87b7-49cb-c045-4352fd3628e2"
@@ -9680,8 +9677,7 @@
           "height": 457
         },
         "id": "hlf_xDOswybn",
-        "outputId": "256c8718-9081-4413-8491-bc074b29bb35",
-        "collapsed": true
+        "outputId": "256c8718-9081-4413-8491-bc074b29bb35"
       },
       "execution_count": 57,
       "outputs": [
@@ -10075,7 +10071,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 489
+          "height": 490
         },
         "id": "YYMtp7aXw26c",
         "outputId": "e19c9dc1-1f6d-43e3-ef88-414ed5406223"
@@ -10832,7 +10828,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 824
+          "height": 825
         },
         "collapsed": true,
         "id": "f1vJZ71myvEH",
@@ -10872,7 +10868,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "collapsed": true,
         "id": "T4Lye_yx8xU7",
@@ -11315,7 +11311,6 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "collapsed": true,
         "id": "IoJ2p8hg08rB",
         "outputId": "7da5172b-7556-4fe5-9835-528e00e71e0a"
       },
@@ -11875,7 +11870,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 488
         },
         "id": "uK7qLSfY077r",
         "outputId": "df6d1fa3-e5a1-497e-c835-df72feaa4540"
@@ -11914,7 +11909,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 144
+          "height": 143
         },
         "id": "ATFZWvyB85nJ",
         "outputId": "63f0120b-1806-45c0-d242-c91ca8b07dd6"
@@ -12620,7 +12615,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 824
+          "height": 825
         },
         "id": "MidbzyFm3e1L",
         "outputId": "c5fd79c4-77d7-4949-eb44-c87dfa82ab73"
@@ -12681,6 +12676,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 789
         },
+        "collapsed": true,
         "id": "u4CYCK0e7NiO",
         "outputId": "0860b77d-24be-43b8-f74b-5315fb88f14b"
       },
@@ -13868,6 +13864,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 789
         },
+        "collapsed": true,
         "id": "5JpTNS8p7cOJ",
         "outputId": "0f33e84b-c161-4748-c935-c79d4db0713f"
       },
@@ -15053,7 +15050,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 650
+          "height": 651
         },
         "id": "p-GI4k2Q7hEP",
         "outputId": "4733721b-2280-41ec-8b8d-f5fefeea2b0b"
@@ -15153,7 +15150,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 468
         },
         "id": "EynyTzzG78IG",
         "outputId": "f0c4ce8b-67d1-4ab7-c806-92840f7e3db3"
@@ -15217,7 +15214,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 75
+          "height": 74
         },
         "id": "SZepWIZwfMAv",
         "outputId": "3c128382-79a2-4a18-f0ff-b2e228f8c10f"
@@ -15278,7 +15275,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Modelo matematico: y=31.0017436x + 11.339475667840773\n"
+        "Modelo matematico: y=31.0017436x + 11.339475667840773\n",
+        "\n"
       ],
       "metadata": {
         "id": "BGkJZBd0hLdx"
@@ -15375,7 +15373,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 468
         },
         "id": "974JNbJCiPUM",
         "outputId": "9673426e-d9da-4230-8797-87942eb9615b"
@@ -15509,7 +15507,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 468
         },
         "id": "WQ0BDz8djDQQ",
         "outputId": "85868a02-19ff-460f-dd4b-d6e17c2237a3"
@@ -15694,7 +15692,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 237
         },
         "id": "TfTO1p7xoemj",
         "outputId": "16468e9a-6026-413f-d3dc-fee8aa080891"
@@ -16102,7 +16100,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 619
+          "height": 620
         },
         "id": "HPRezrhQlrpF",
         "outputId": "13b4a67a-88ae-45f1-e488-ce34cb23b00e"
@@ -16152,7 +16150,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 468
         },
         "id": "FfDKzY_Gox7Z",
         "outputId": "9264e749-6d33-4ce8-f4d5-a4ff8db5a076"
@@ -16218,11 +16216,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "iUxJlLuKtq0c",
-        "outputId": "3ee696ec-6448-48f0-812b-3886f46b9c2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iUxJlLuKtq0c",
+        "outputId": "3ee696ec-6448-48f0-812b-3886f46b9c2c"
       },
       "execution_count": 215,
       "outputs": [
@@ -16265,11 +16263,11 @@
         "model.score(Vars_Indep,Var_Dep)"
       ],
       "metadata": {
-        "id": "yhjjWNKRuRLX",
-        "outputId": "af06f043-85b9-4f7b-8079-75bdbeffa9e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yhjjWNKRuRLX",
+        "outputId": "af06f043-85b9-4f7b-8079-75bdbeffa9e4"
       },
       "execution_count": 216,
       "outputs": [
@@ -16293,11 +16291,11 @@
         "y_pred"
       ],
       "metadata": {
-        "id": "Q4pTM4h5ugsa",
-        "outputId": "67caab32-1051-4d41-f6c0-1b0225e78856",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q4pTM4h5ugsa",
+        "outputId": "67caab32-1051-4d41-f6c0-1b0225e78856"
       },
       "execution_count": 217,
       "outputs": [
@@ -16322,12 +16320,12 @@
         "Cuantitativas_nuevo"
       ],
       "metadata": {
-        "id": "gkrO9Oe1uZHS",
-        "outputId": "3c859b9d-3d48-440f-ea68-1a9e3fe8aa3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
-        }
+          "height": 423
+        },
+        "id": "gkrO9Oe1uZHS",
+        "outputId": "3c859b9d-3d48-440f-ea68-1a9e3fe8aa3a"
       },
       "execution_count": 218,
       "outputs": [
@@ -16792,11 +16790,11 @@
         "coef_Deter"
       ],
       "metadata": {
-        "id": "lAPwk9npueKm",
-        "outputId": "2519944a-7239-4050-95eb-d4583d9099c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lAPwk9npueKm",
+        "outputId": "2519944a-7239-4050-95eb-d4583d9099c6"
       },
       "execution_count": 219,
       "outputs": [
@@ -16820,11 +16818,11 @@
         "coef_Correl"
       ],
       "metadata": {
-        "id": "1cEztB0ewC-p",
-        "outputId": "70f59db5-e081-4c05-c1f4-e06e32d00e3d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1cEztB0ewC-p",
+        "outputId": "70f59db5-e081-4c05-c1f4-e06e32d00e3d"
       },
       "execution_count": 220,
       "outputs": [
